# rusty-words

./: .gitignore  Cargo.toml  LICENSE  README.md  default.nix  flake.nix  package.nix  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  main.yml  release.yml
cli/: Cargo.toml
cli/src/: args.rs  main.rs  tui.rs
crates/rusty-word-tools/: Cargo.toml
crates/rusty-word-tools/src/: main.rs  t2k.rs  wrts.rs
crates/rusty-words-cli/: Cargo.toml
crates/rusty-words-cli/src/: args.rs  main.rs  tui.rs
crates/rusty-words-common/: Cargo.toml
crates/rusty-words-common/src/: judgement.rs  lang_codes.rs  lib.rs  model.rs  paths.rs  symbol_table.rs
gui/: Cargo.toml
gui/src/: main.rs
src/: cli.rs  main.rs  model.rs  paths.rs  tui.rs
word-tools/: t2k.rs
