[package]
name = "rusty-words-cli"
description = "Learn your words in your terminal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4.5.20", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.28.1"
itertools = "0.13.0"
libc = "0.2.159"
rand = "0.8.5"
regex = { version = "1.11.0", features = ["pattern"] }
ron = "0.8.1"
rusty-words-common = { path = "../crates/rusty-words-common" }
serde = { version = "1.0.210" }
ratatui = "0.28"
tui-input = "0.10.1"

[[bin]]
name = "rwds-cli"
path = "src/main.rs"
