[package]
name = "rusty-word-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.13", features = ["derive"] }
color-eyre = "0.6.2"
serde = { version = "1.0.140", features = ["derive"] }
serde-xml-rs = "0.5.1"

[[bin]]
name = "rwds-tools"
path = "src/main.rs"
