[package]
name = "rusty-word-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
color-eyre = "0.6.2"
once_cell = "1.16.0"
rand = "0.8.5"
serde = { version = "1.0.140", features = ["derive"] }
serde-xml-rs = "0.5.1"
serde_json = "1.0.87"

[[bin]]
name = "rwds-tools"
path = "src/main.rs"
