[package]
name = "rusty-words-common"
description = "Rusty-words common library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "0.7.18"
chrono = "0.4.20"
clap = { workspace = true }
color-eyre = "0.6.1"
dirs = "4.0.0"
lazy-regex = "3.4.1"
libc = "0.2.126"
rand = "0.8.5"
ron = "0.7.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_with = "1.14.0"
tabled = "0.7.0"
uuid = "1.1.2"
